Version 1.0pre1 -- DEVELOPMENT
------------------------------
- added config option to set IMAP folder delimiter rather than always detecting it
- Made session cookie parameter use PHP's settings rather than making assumptions
- Select/Deslect all implemented using only HTML (not Javascript)
- Fixed default charset that is sent with outbound messages (now user's preferred charset)
- Sort method saving now transparent to user, and saves between sessions
- Now replacing all \n with \r\n before sending the message.
- Added sorting option for NO sorting.. 10000 times faster!
- Using <pre> tags for viewing message body instead of <tt> and &nbsp;
- Added redirection from subdirectories to login page
- Attachments are shown in message index (shown as a "+")
- Updated attachment plugin support and passing values to hooks (see plugins.txt)
- Added file and message size in many locations
- Made message index order customizable (from, subject, date) can be (date, from, subject)
- Fixed some security problems with uploading attachments
- When reading, attachments look better and have a better plugin interface
- Some functions now pass values by reference to save on memory
- Added Catalan translation from Josep Sanz <jsanz@fa.upc.es>
- Added Serbian translation from Boris Manojlovic <steki@verat.net>
- Added Polish translation of Help from Krystian Kanabrodzki <krys@voruta.eu.org>


Version 0.5 -- September 25, 2000 
---------------------------------
- Fixed some problems with downloading attachments in IE
- If no date is set in header, we take internal date of the imap server
- Fixed some lingering bugs in mime parsing 
- Searching specifies CHARSET option
- Security fixes
- Fixed hyperlink rendering problems

Version 0.5pre2 -- September 6, 2000 
------------------------------------
- Added quite a few new themes
- Fixed double folder problem on some servers
- Using encryption for passwords
- Added a patch from Bill Thousand to allow easier virtual domains